--- a/app/globals.css
+++ b/app/globals.css
@@ -38,6 +38,11 @@ body {
     --background-shade-1: 202 36% 84%;
     --background-shade-2: 200 31% 74%;
     --background-shade-3: 200 15% 53%;
+
+    --brand-badge-color: 192 100% 21.6%;
+
+    --success-green: 0 100% 50%;
+    --failure-red: 0 100% 50%;
   }
 
   .dark {
@@ -69,22 +74,27 @@ body {
     --background-shade-1: 0 0% 0;
     --background-shade-2: 0 0% 0;
     --background-shade-3: 0 0% 0;
+
+    --brand-badge-color: 192 100% 21.6%;
+
+    --success-green: 0 100% 50%;
+    --failure-red: 0 100% 50%;
   }
 
   .default {
-    --background: 0 0% 3.9%;
+    --background: 216 47.2% 10.4%;
     --foreground: 0 0% 98%;
     --card: 0 0% 3.9%;
     --card-foreground: 0 0% 98%;
     --popover: 0 0% 3.9%;
     --popover-foreground: 0 0% 98%;
-    --primary: 134 100% 50%;
-    --primary-foreground: 0 0% 9%;
+    --primary: 205 11% 30.4%;
+    --primary-foreground: 100 100% 100%;
     --secondary: 0 0% 14.9%;
     --secondary-foreground: 0 0% 98%;
-    --muted: 0 0% 14.9%;
+    --muted: 216 47.2% 8%;
     --muted-foreground: 0 0% 63.9%;
-    --accent: 0 0% 14.9%;
+    --accent: 216 47.2% 7%;
     --accent-foreground: 0 0% 98%;
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 0 0% 98%;
@@ -100,6 +110,11 @@ body {
     --background-shade-1: 217 49% 8%;
     --background-shade-2: 217 56% 8%;
     --background-shade-3: 0 0% 0;
+
+    --brand-badge-color: 192 100% 21.6%;
+
+    --success-green: 0 100% 50%;
+    --failure-red: 0 100% 50%;
   }
   
 }
